--- a/src/main/resources/fxml/Chart.fxml
+++ b/src/main/resources/fxml/Chart.fxml
@@ -969,26 +969,30 @@
       </StackPane>
       <Button fx:id="btnBack" layoutX="34.0" layoutY="534.0" mnemonicParsing="false" onAction="#showMain" prefHeight="32.0" prefWidth="100.0" text="Back" />
       <Label layoutX="224.0" layoutY="30.0" styleClass="form-label" text="Show:" textFill="WHITE" />
-      <Label layoutX="224.0" layoutY="73.0" styleClass="form-label" text="Group:" textFill="WHITE" />
-      <Label layoutX="224.0" layoutY="116.0" styleClass="form-label" text="Date:" textFill="WHITE" />
+      <Label layoutX="224.0" layoutY="65.0" styleClass="form-label" text="Group:" textFill="WHITE" />
+      <Label layoutX="224.0" layoutY="99.0" styleClass="form-label" text="Date:" textFill="WHITE" />
       <ComboBox fx:id="cmboBxSelectShow" layoutX="317.0" layoutY="25.0" onAction="#showSelected" prefHeight="28.0" prefWidth="249.0" styleClass="show-selector" />
-      <Label fx:id="lblGroupOutput" layoutX="316.0" layoutY="73.0" styleClass="form-label" textFill="WHITE" />
-      <Label fx:id="lblDateOutput" layoutX="316.0" layoutY="116.0" styleClass="form-label" textFill="WHITE" />
-      <Label layoutX="224.0" layoutY="159.0" styleClass="form-label" text="Section:" textFill="WHITE" />
-      <Label layoutX="363.0" layoutY="159.0" styleClass="form-label" text="Row:" textFill="WHITE" />
-      <Label layoutX="476.0" layoutY="159.0" styleClass="form-label" text="Seat:" textFill="WHITE" />
-      <Label fx:id="lblSectionOutput" layoutX="305.0" layoutY="159.0" styleClass="form-label" textFill="WHITE" />
-      <Label fx:id="lblRowOutput" layoutX="417.0" layoutY="159.0" styleClass="form-label" textFill="WHITE" />
-      <Label fx:id="lblSeatOutput" layoutX="534.0" layoutY="159.0" styleClass="form-label" textFill="WHITE" />
-      <Label layoutX="252.0" layoutY="237.0" styleClass="form-label" text="First Name:" textFill="WHITE" />
-      <Label layoutX="252.0" layoutY="276.0" styleClass="form-label" text="Last Name:" textFill="WHITE" />
-      <TextField fx:id="txtBxFirstName" layoutX="365.0" layoutY="232.0" styleClass="form-text-input" />
-      <TextField fx:id="txtBxLastName" layoutX="365.0" layoutY="273.0" styleClass="form-text-input" />
-      <Button fx:id="btnAdd" layoutX="304.0" layoutY="344.0" mnemonicParsing="false" onAction="#modifySeat" prefHeight="32.0" prefWidth="80.0" text="Add" />
-      <Button fx:id="btnDelete" layoutX="415.0" layoutY="344.0" mnemonicParsing="false" onAction="#deleteSeat" prefHeight="32.0" prefWidth="80.0" text="Delete" />
-      <Label fx:id="lblNameError" layoutX="362.0" layoutY="313.0" styleClass="form-label" text="* Please enter name" textFill="RED" />
+      <Label fx:id="lblGroupOutput" layoutX="316.0" layoutY="65.0" styleClass="form-label" text="Test Group" textFill="WHITE" />
+      <Label fx:id="lblDateOutput" layoutX="316.0" layoutY="99.0" styleClass="form-label" text="Test Date" textFill="WHITE" />
+      <Label layoutX="224.0" layoutY="134.0" styleClass="form-label" text="Section:" textFill="WHITE" />
+      <Label layoutX="363.0" layoutY="134.0" styleClass="form-label" text="Row:" textFill="WHITE" />
+      <Label layoutX="476.0" layoutY="134.0" styleClass="form-label" text="Seat:" textFill="WHITE" />
+      <Label fx:id="lblSectionOutput" layoutX="305.0" layoutY="134.0" styleClass="form-label" text="1" textFill="WHITE" />
+      <Label fx:id="lblRowOutput" layoutX="417.0" layoutY="134.0" styleClass="form-label" text="A" textFill="WHITE" />
+      <Label fx:id="lblSeatOutput" layoutX="534.0" layoutY="134.0" styleClass="form-label" text="1" textFill="WHITE" />
+      <Label layoutX="252.0" layoutY="202.0" styleClass="form-label" text="First Name:" textFill="WHITE" />
+      <Label layoutX="252.0" layoutY="237.0" styleClass="form-label" text="Last Name:" textFill="WHITE" />
+      <TextField fx:id="txtBxFirstName" layoutX="365.0" layoutY="197.0" styleClass="form-text-input" />
+      <TextField fx:id="txtBxLastName" layoutX="365.0" layoutY="234.0" styleClass="form-text-input" />
+      <TextField fx:id="txtBxEmail" layoutX="365.0" layoutY="271.0" styleClass="form-text-input" />
+      <TextField fx:id="txtBxPhone" layoutX="365.0" layoutY="308.0" styleClass="form-text-input" />
+      <Button fx:id="btnAdd" layoutX="304.0" layoutY="370.0" mnemonicParsing="false" onAction="#modifySeat" prefHeight="32.0" prefWidth="80.0" text="Add" />
+      <Button fx:id="btnDelete" layoutX="415.0" layoutY="370.0" mnemonicParsing="false" onAction="#deleteSeat" prefHeight="32.0" prefWidth="80.0" text="Delete" />
+      <Label fx:id="lblNameError" layoutX="362.0" layoutY="342.0" styleClass="form-label" text="* Please enter name" textFill="RED" />
       <Button fx:id="btnPrint" layoutX="666.0" layoutY="534.0" mnemonicParsing="false" onAction="#printSetup" prefHeight="32.0" prefWidth="100.0" text="Print" />
-      <Label fx:id="lblSeatStatus" alignment="CENTER" contentDisplay="CENTER" layoutX="303.0" layoutY="397.0" prefHeight="18.0" prefWidth="192.0" styleClass="form-label" textFill="#00d9ff" />
-      <CheckBox fx:id="chkBxSelectMultiple" layoutX="365.0" layoutY="201.0" mnemonicParsing="false" onAction="#toggleMultiSelect" text="Select Multiple Seats" textFill="WHITE" />
+      <Label fx:id="lblSeatStatus" alignment="CENTER" contentDisplay="CENTER" layoutX="303.0" layoutY="415.0" prefHeight="18.0" prefWidth="192.0" styleClass="form-label" text="This is a status message" textFill="#00d9ff" />
+      <CheckBox fx:id="chkBxSelectMultiple" layoutX="365.0" layoutY="163.0" mnemonicParsing="false" onAction="#toggleMultiSelect" text="Select Multiple Seats" textFill="WHITE" />
+      <Label layoutX="252.0" layoutY="274.0" styleClass="form-label" text="Email:" textFill="WHITE" />
+      <Label layoutX="252.0" layoutY="311.0" styleClass="form-label" text="Phone:" textFill="WHITE" />
     </children>
 </AnchorPane>
